# vcenter-event-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  NOTICE  README.md  alembic.ini  docker-compose.postgres.yml  docker-compose.sqlite.yml  docker-entrypoint.sh  package-lock.json  pyproject.toml  pytest.ini
alembic/: env.py
docs/: TODO.md  architecture-improvement-plan-2026-07-05.md  architecture-improvement-review-2026-07-05.md  architecture-review-2026-07-05.md  architecture.md  backend-internals.md  backend-operations.md  backend.md  chat.md  development.md  features_list.md  frontend.md  getting-started.md  llm-input-anonymization.md  potential-bug-improvement-plan-2026-07-06.md  potential-bug-report-2026-07-06.md  web-search-conditions.md
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
scripts/: capture_ui_screenshots.py  init_dev_db.py  verify_dev_db.py
tests/: conftest.py  test_alert_eval_event_score_config.py  test_alert_eval_events.py  test_alert_eval_logging.py  test_alert_eval_metrics.py  test_alert_models.py  test_alert_renderer.py  test_alert_settings.py  test_alerts_api.py  test_chat_api.py  test_chat_event_time_buckets.py  test_chat_incident_timeline.py  test_chat_llm.py  test_chat_period_metrics.py  test_chat_preview_api.py  test_composite_indexes.py  test_copilot_cli_llm.py  test_correlation_context.py  test_dashboard_summary.py  test_datastore_metrics.py  test_datetime_utils.py  test_db_session_migrations.py  test_digest_llm.py  (+49 more)
(+577 files in other folders)
