[project]
name = "vcenter-event-assistant"
version = "0.1.0"
description = "vCenter events and host metrics dashboard (FastAPI + React)"
readme = "README.md"
authors = [
    { name = "Takeyuki Moriyama", email = "3154232+t-m0riyama@users.noreply.github.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.13.1",
    "pyvmomi>=9.0.0.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]

[project.scripts]
vcenter-event-assistant = "vcenter_event_assistant:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]
